{
  "@@locale": "en",
  "appTitle": "Glotist",
  "@appTitle": {
    "description": "The title of the application"
  },
  "languageSelectionTitle": "Languages",
  "letsGetStarted": "Let's get started",
  "refineExperience": "Refine your language learning experience",
  "displayLanguage": "DISPLAY LANGUAGE",
  "@displayLanguageDisclaimer": {
    "description": "Disclaimer below display language picker"
  },
  "displayLanguageDisclaimer": "Will be used for interface and conversations",
  "languageToLearn": "LANGUAGE TO LEARN",
  "seeAllLanguages": "See all 40+ languages",
  "continueAction": "Continue",
  "langEnglish": "English",
  "langEnglishUS": "English (United States)",
  "langSpanish": "Spanish",
  "langFrench": "French",
  "langTurkish": "Turkish",
  "langGerman": "German",
  "langDutch": "Dutch",
  "langJapanese": "Japanese",
  "langItalian": "Italian",
  "langPortuguese": "Portuguese",
  "langKorean": "Korean",
  "profileSetup": "Profile Setup",
  "skip": "Skip",
  "substepInterests": "Interests",
  "substepLevel": "Level",
  "substepPurpose": "Purpose",
  "typeAMessage": "Type a message..."
}
