{
  "@@locale": "nl",
  "appTitle": "Glotist",
  "languageSelectionTitle": "Talen",
  "letsGetStarted": "Laten we beginnen",
  "refineExperience": "Verfijn je taal leerervaring.",
  "displayLanguage": "WEERGAVETAAL",
  "displayLanguageDisclaimer": "Wordt gebruikt voor interface en gesprekken",
  "languageToLearn": "TAAL OM TE LEREN",
  "seeAllLanguages": "Bekijk alle 40+ talen",
  "continueAction": "Doorgaan",
  "langEnglish": "Engels",
  "langEnglishUS": "Engels (Verenigde Staten)",
  "langSpanish": "Spaans",
  "langFrench": "Frans",
  "langTurkish": "Turks",
  "langGerman": "Duits",
  "langDutch": "Nederlands",
  "langJapanese": "Japans",
  "langItalian": "Italiaans",
  "langPortuguese": "Portugees",
  "langKorean": "Koreaans",
  "profileSetup": "Profiel instellen",
  "skip": "Overslaan",
  "substepInterests": "Interesses",
  "substepLevel": "Niveau",
  "substepPurpose": "Doel",
  "typeAMessage": "Typ een bericht..."
}
