{
  "@@locale": "tr",
  "appTitle": "Glotist",
  "languageSelectionTitle": "Diller",
  "letsGetStarted": "Haydi başlayalım",
  "refineExperience": "Dil öğrenme deneyimini iyileştir.",
  "displayLanguage": "GÖRÜNTÜLEME DİLİ",
  "displayLanguageDisclaimer": "Arayüz ve sohbetler için kullanılacaktır",
  "languageToLearn": "ÖĞRENİLECEK DİL",
  "seeAllLanguages": "Tüm 40+ dili gör",
  "continueAction": "Devam Et",
  "langEnglish": "İngilizce",
  "langEnglishUS": "İngilizce (Amerika Birleşik Devletleri)",
  "langSpanish": "İspanyolca",
  "langFrench": "Fransızca",
  "langTurkish": "Türkçe",
  "langGerman": "Almanca",
  "langDutch": "Felemenkçe",
  "langJapanese": "Japonca",
  "langItalian": "İtalyanca",
  "langPortuguese": "Portekizce",
  "langKorean": "Korece",
  "profileSetup": "Profil Kurulumu",
  "skip": "Atla",
  "substepInterests": "İlgi Alanları",
  "substepLevel": "Seviye",
  "substepPurpose": "Amaç",
  "typeAMessage": "Bir mesaj yazın..."
}
